--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>PseudonymExamManager</title>
     <link rel="manifest" href="/manifest.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue3-slider/dist/vue3-slider.umd.min.js"></script>
 </head>
 <body class="flex items-center justify-center h-screen m-0 font-sans">
     <div id="app" class="flex flex-col md:flex-row w-full h-full p-2">
@@ -29,8 +31,18 @@
                 <input v-model="config.university" @blur="immediateProcessing" @keyup.enter="immediateProcessing" class="w-full p-2 border rounded" />
             </div>
             <div class="mb-4">
-                <label class="block mb-1">Section Size:</label>
-                <input type="number" v-model="config.sectionSize" @blur="immediateProcessing" @keyup.enter="immediateProcessing" class="w-full p-2 border rounded" />
+                <label class="block mb-1">Default Section Size:</label>
+                <input type="number" v-model="config.sectionSize" @change="initializeSliders" class="w-full p-2 border rounded" />
+            </div>
+            <div class="mb-4">
+                <label class="block mb-1">Sections:</label>
+                <div v-for="(sliderSection, index) in sliderSections" :key="index" class="mb-2">
+                    <vue3-slider v-model="sliderSection.size" @input="updateSectionsOnSliderChange"></vue3-slider>
+                    <p>Section {{ index + 1 }}: {{ sliderSection.size }} students</p>
+                    <p v-if="sliderSection.firstInitial && sliderSection.lastInitial">
+                        From {{ sliderSection.firstInitial }} to {{ sliderSection.lastInitial }}
+                    </p>
+                </div>
             </div>
         </div>
         <div class="right-panel flex-2 p-5 border-t md:border-t-0 md:border-l border-gray-300 w-full md:w-3/5 h-full relative">
@@ -45,7 +57,6 @@
             <ve-progress :progress="progress" size="100" color="#3f79ff"></ve-progress>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-ellipse-progress/dist/veprogress.umd.min.js"></script>
