--- a/sliderdemo.html
+++ b/sliderdemo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Section Management</title>
+  <title>Section Manager</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .section {
@@ -23,14 +23,16 @@
   </style>
 </head>
 <body>
-  <div id="app" class="container mx-auto p-4">
-    <div v-for="(value, index) in values" :key="index" class="section">
+  <div id="app" class="container mx-auto p-4" v-if="students.value.length > 0">
+    <div v-for="(size, index) in sectionSizes" :key="index" class="section">
       <div class="section-number">{{ index + 1 }}</div>
-      <div :style="{ width: value + '%' }" class="section-bar"></div>
-      <input type="number" v-model="values[index]" class="input input-bordered w-full" />
+      <div :style="{ width: size + '%' }" class="section-bar"></div>
+      <input type="number" v-model="sectionSizes[index]" class="input input-bordered w-full" />
     </div>
-    <button @click="addSection" class="btn btn-primary mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Add Section</button>
-    <button @click="removeSection" class="btn btn-secondary mt-4 bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">Remove Section</button>
+    <div v-if="initialized">
+      <button @click="addSection" class="btn btn-primary mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Add Section</button>
+      <button @click="removeSection" class="btn btn-secondary mt-4 bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">Remove Section</button>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.min.js"></script>
@@ -39,19 +41,48 @@
 
     createApp({
       setup() {
-        const values = ref([20, 20, 20, 40, 56, 20]);
+        const students = ref([...Array(120).keys()]); // Example array of students
+        const config = ref({ sectionSize: 10 });
+        const sectionSizes = ref([]);
+        const initialized = ref(false);
+
+        const initializeSections = () => {
+          const numberOfSections = Math.ceil(students.value.length / config.value.sectionSize);
+          sectionSizes.value = Array(numberOfSections).fill(config.value.sectionSize);
+          initialized.value = true;
+        };
 
         const addSection = () => {
-          values.value.push(0); // Add a new section
+          sectionSizes.value.push(0); // Add a new section
         };
 
         const removeSection = () => {
-          if (values.value.length > 1) {
-            values.value.pop(); // Remove the last section
+          if (sectionSizes.value.length > 1) {
+            sectionSizes.value.pop(); // Remove the last section
           }
         };
 
-        return { values, addSection, removeSection };
+        const sections = ref([]);
+        const progress = ref(0);
+
+        const divideStudentsIntoSections = async () => {
+          sections.value = [];
+          let currentIndex = 0;
+          for (let size of sectionSizes.value) {
+            sections.value.push(students.value.slice(currentIndex, currentIndex + size));
+            currentIndex += size;
+            progress.value = Math.round((currentIndex / students.value.length) * 100);
+            await new Promise(resolve => setTimeout(resolve, 0));
+          }
+          console.log("Sections:", sections.value);
+        };
+
+        return { students, config, sectionSizes, initialized, addSection, removeSection, initializeSections, divideStudentsIntoSections };
+      },
+      mounted() {
+        if (this.students.value.length > 0) {
+          this.initializeSections();
+        }
       }
     }).mount('#app');
   </script>
